fix image overflowing issue

--- a/css/beep.css
+++ b/css/beep.css
@@ -1,3 +1,7 @@
+img {
+  width: 100%;
+}
+
 .goal-description {
   margin-bottom: 2.5rem;
 }
