--- a/css/general.css
+++ b/css/general.css
@@ -76,10 +76,6 @@ section {
   margin-bottom: 1.6rem;
 }
 
-img {
-  width: 100%;
-}
-
 .main-nav {
   height: 6.9rem;
   background-color: #0f0f0f;
