--- a/css/index.css
+++ b/css/index.css
@@ -36,6 +36,22 @@
   background-position: -30% 45%;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  animation: text-simple-animation-rev 0.8s ease-out;
+}
+
+@keyframes text-simple-animation-rev {
+  0% {
+    background-size: 0%;
+  }
+  25% {
+    background-size: 25%;
+  }
+  50% {
+    background-size: 50%;
+  }
+  100% {
+    background-size: 100%;
+  }
 }
 
 .case-study-link {
@@ -44,12 +60,11 @@
   margin-top: 0.9rem;
 }
 
-.asel-info {
+.flex-column {
   gap: 1.6rem;
 }
 
-.asel-heading,
-.chess-heading {
+.project-heading {
   font-weight: 300;
   margin-bottom: 0;
 }
@@ -66,13 +81,28 @@
 
 .asel-laptop-img,
 .asel-mobile-img {
-  width: 70%;
+  filter: drop-shadow(5px 7px #391cb0);
+  transition: all 0.3s ease-in;
 }
 .chess-laptop-img,
 .chess-mobile-img {
-  width: 70%;
+  filter: drop-shadow(5px 7px #3b730d);
+  transition: all 0.3s ease-in;
 }
 .beep-n-bop-img {
+  filter: drop-shadow(5px 7px #3d00d8);
+  transition: all 0.3s ease-in;
+}
+
+.asel-laptop-img:hover,
+.asel-mobile-img:hover,
+.beep-n-bop-img:hover {
+  filter: drop-shadow(1rem 1.4rem #391cb0);
+}
+
+.chess-laptop-img:hover,
+.chess-mobile-img:hover {
+  filter: drop-shadow(1rem 1.4rem #3b730d);
 }
 
 /**************************/
@@ -83,8 +113,6 @@
     grid-template-columns: 55fr 45fr;
   } */
   .img-container {
-    min-width: 0;
-    min-height: 0;
   }
   .asel-laptop-img,
   .asel-mobile-img,
@@ -96,8 +124,8 @@
     display: block; */
     /* max-width: 100%; */
     /* max-height: 100%; */
-    height: 100%;
-    /* object-fit: contain; */
+    /* height: 100%;
+    object-fit: cover; */
   }
 }
 
@@ -107,10 +135,28 @@
 @media (max-width: 59em) {
   .grid-ux {
     grid-template-columns: 1fr;
-    gap: 5.2rem;
+    /* gap: 5.2rem; */
+    grid-template-areas:
+      'a'
+      'b'
+      'c'
+      'd'
+      'e'
+      'f';
   }
   .img-container {
-    width: 70%;
     margin: 0 auto;
+  }
+
+  .asel-project-info {
+    grid-area: a;
+  }
+
+  .chess-project-info {
+    grid-area: c;
+  }
+
+  .beep-project-info {
+    grid-area: e;
   }
 }
